@@ -1,5 +1,8 @@
 2004-05-07    <chromakode@llama>
 
+	* fgdiag/lib/fgdb.py (_check_id, _id_equals): Added type checking
+	for ids
+
 	* fgdiag/lib/errors.py (SQLError): Added exception to enhance
 	error trapping and sql debugging.
 
